@@ -382,6 +382,22 @@ end_import
 
 begin_import
 import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|io
+operator|.
+name|nativeio
+operator|.
+name|NativeIO
+import|;
+end_import
+
+begin_import
+import|import
 name|com
 operator|.
 name|google
@@ -819,16 +835,23 @@ operator|+
 literal|"already exists"
 argument_list|)
 expr_stmt|;
-if|if
-condition|(
-operator|!
-name|inprogressFile
+try|try
+block|{
+name|NativeIO
 operator|.
 name|renameTo
 argument_list|(
+name|inprogressFile
+argument_list|,
 name|dstFile
 argument_list|)
-condition|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IOException
+name|e
+parameter_list|)
 block|{
 name|errorReporter
 operator|.
@@ -844,6 +867,8 @@ argument_list|(
 literal|"Unable to finalize edits file "
 operator|+
 name|inprogressFile
+argument_list|,
+name|e
 argument_list|)
 throw|;
 block|}
@@ -2702,15 +2727,14 @@ name|newSuffix
 argument_list|)
 decl_stmt|;
 comment|// renameTo fails on Windows if the destination file already exists.
+try|try
+block|{
 if|if
 condition|(
-operator|!
-name|src
-operator|.
-name|renameTo
-argument_list|(
 name|dst
-argument_list|)
+operator|.
+name|exists
+argument_list|()
 condition|)
 block|{
 if|if
@@ -2720,15 +2744,34 @@ name|dst
 operator|.
 name|delete
 argument_list|()
-operator|||
-operator|!
-name|src
+condition|)
+block|{
+throw|throw
+operator|new
+name|IOException
+argument_list|(
+literal|"Couldn't delete "
+operator|+
+name|dst
+argument_list|)
+throw|;
+block|}
+block|}
+name|NativeIO
 operator|.
 name|renameTo
 argument_list|(
+name|src
+argument_list|,
 name|dst
 argument_list|)
-condition|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IOException
+name|e
+parameter_list|)
 block|{
 throw|throw
 operator|new
@@ -2741,9 +2784,10 @@ operator|+
 literal|" to "
 operator|+
 name|dst
+argument_list|,
+name|e
 argument_list|)
 throw|;
-block|}
 block|}
 name|file
 operator|=
